build_error.log
    Checking hidemaru_clone v0.1.0 (C:\Users\tetsu\vscode\hidemaru-editor\hidemaru_clone)
error[E0061]: this function takes 2 arguments but 1 argument was supplied
   --> src\main.rs:124:80
    |
 27 | #[derive(Default, NwgUi)]
    |                   ----- argument #2 of type `&EventData` is missing
...
124 |     #[nwg_events(OnTextInput: [HidemaruClone::on_text_changed], OnKeyRelease: [HidemaruClone::on_key_release], OnMousePress: [Hidem...
    |                                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
note: method defined here
   --> src\main.rs:198:8
    |
198 |     fn on_key_release(&self, data: &nwg::EventData) {
    |        ^^^^^^^^^^^^^^        ---------------------
help: provide the argument
    |
124 |     #[nwg_events(OnTextInput: [HidemaruClone::on_text_changed], OnKeyRelease: [HidemaruClone::on_key_release(NwgUi, /* &EventData */)], OnMousePress: [HidemaruClone::on_cursor_move] )]
    |                                                                                                             +++++++++++++++++++++++++

For more information about this error, try `rustc --explain E0061`.
error: could not compile `hidemaru_clone` (bin "hidemaru_clone") due to 1 previous error
